# rustiq-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  publish.yml
src/: lib.rs
src/routines/: decoding.rs  f2_linalg.rs  mod.rs  rotation_extraction.rs  rotation_optimization.rs
src/structures/: clifford_circuit.rs  graph_state.rs  hardware.rs  isometry.rs  measurement_like.rs  metric.rs  mod.rs  parameter.rs  pauli.rs  pauli_dag.rs  pauli_set.rs  tableau.rs
src/synthesis/: mod.rs
src/synthesis/clifford/: mod.rs
src/synthesis/clifford/codiagonalization/: common.rs  count.rs  depth.rs  subset_wise.rs
src/synthesis/clifford/graph_state/: count.rs  depth.rs  utils.rs
src/synthesis/clifford/isometry/: common.rs  count.rs  depth.rs  synthesis.rs
src/synthesis/pauli_network/: chunks.rs  greedy_order_preserving.rs  greedy_pauli_network.rs  mod.rs  synthesis.rs
