[package]
name = "rustiq-core"
description = "Quantum circuit synthesis library in rust"
version = "0.0.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module"] }
petgraph = "0.6.3"
itertools = "0.10.5"
rand = "0.8.5"

