[package]
name = "rustiq-core"
description = "Quantum circuit synthesis library in rust"
version = "0.0.10"
edition = "2021"
license-file = "LICENSE.txt"
repository = "https://github.com/smartiel/rustiq-core"
documentation = "https://docs.rs/rustiq-core"
homepage = "https://github.com/smartiel/rustiq-core"

[dependencies]
petgraph = "0.6.3"
itertools = "0.10.5"
rand = "0.8.5"
